--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "openai-realtime-console",
+  "name": "manager-coaching",
   "version": "0.0.0",
   "type": "module",
-  "private": true,
+  "homepage": "https://kentwills.github.io/manager_coaching",
   "dependencies": {
     "@openai/realtime-api-beta": "github:openai/openai-realtime-api-beta",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/leaflet": "^1.9.12",
-    "@types/node": "^16.18.108",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
+    "@types/leaflet": "^1.9.14",
+    "@types/node": "^16.18.119",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "dotenv": "^16.4.5",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
@@ -20,19 +20,18 @@
     "react-feather": "^2.0.10",
     "react-leaflet": "^4.2.1",
     "react-scripts": "^5.0.1",
-    "sass": "^1.78.0",
+    "sass": "^1.80.6",
     "save": "^2.9.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
     "ws": "^8.18.0"
   },
   "scripts": {
+    "pre-deploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "zip": "zip -r realtime-api-console.zip . -x 'node_modules' 'node_modules/*' 'node_modules/**' '.git' '.git/*' '.git/**' '.DS_Store' '*/.DS_Store' 'package-lock.json' '*.zip' '*.tar.gz' '*.tar' '.env'",
-    "relay": "nodemon ./relay-server/index.js"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -54,6 +53,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "gh-pages": "^6.2.0",
     "nodemon": "^3.1.7"
   }
 }
